--- a/Style/symbol-commands.tex
+++ b/Style/symbol-commands.tex
@@ -15,7 +15,7 @@
 \newcommand \gammaN{$(\gamma, n)$}
 \newcommand \neutron{$n$}
 \newcommand \neutrinolessDoubleBeta{$0\nu{}\beta{}\beta{}$}
-
+\newcommand \twoNeutrinoDoubleBeta{$2\nu{}\beta{}\beta{}$}
 
 %% Physics Related Backgrounds
 %%-----------------------%%
@@ -92,6 +92,10 @@
 \newcommand \BiTOZ{$^{210}$Bi}
 \newcommand \BiTOT{$^{212}$Bi}
 \newcommand \BiTOF{$^{214}$Bi}
+\newcommand \BiTOE{$^{218}$Bi}
+
+\newcommand \BiPoTOF{$^{214}$BiPo}
+\newcommand \BiPoTOT{$^{212}$BiPo}
 
 \newcommand \RaTTF{$^{224}$Ra}
 \newcommand \RaTTS{$^{226}$Ra}
