--- a/mythesis.bib
+++ b/mythesis.bib
@@ -424,6 +424,21 @@
     year = "1976"
 }
 
+@article{Ellis:2018dmb,
+    author = "Ellis, John and Nagata, Natsumi and Olive, Keith A.",
+    title = "{Uncertainties in WIMP Dark Matter Scattering Revisited}",
+    eprint = "1805.09795",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "KCL-PH-TH/2018-19, CERN-TH/2018-123, UMN-TH-3719/18, FTPI-MINN-18/10, UT-18-12",
+    doi = "10.1140/epjc/s10052-018-6047-y",
+    journal = "Eur. Phys. J. C",
+    volume = "78",
+    number = "7",
+    pages = "569",
+    year = "2018"
+}
+
 %% Electric dipole moment limit of neutron
 @article{edm_limit,
     author = "Baker, C.A. and others",
@@ -1499,7 +1514,6 @@ author = "Keiko Fujii and Yuya Endo and Yui Torigoe and Shogo Nakamura and Tomiy
       title          = "{A statistical framework for the characterisation of WIMP dark matter with the LUX-ZEPLIN experiment}",
       school         = "Imperial College London",
       year           = "2019",
-      url            ="",
 }
 
 %% NEST Paper 1
@@ -1686,6 +1700,11 @@ author = "M. Yeh and A. Garnov and R.L. Hahn",
 %%---------------------%%
 
 %% SECTION 3.1 %%
+
+%% Wiki decay diagram
+@misc{wikipedia_2020, 
+    title={Decay chain}, url={https://en.wikipedia.org/wiki/Decay_chain#/media/File:Decay_Chain_Thorium.svg}, journal={Wikipedia}, publisher={Wikimedia Foundation}, year={2020}, month={Dec}}
+
 
 %% Radon plate-out
 @article{Bruemmer_2015,
@@ -2725,6 +2744,18 @@ year = {1997}
 %%----- CHAPTER 6 -----%%
 %%---------------------%%
 
+@article{Barr:2006it,
+    author = "Barr, G. D. and Gaisser, T. K. and Robbins, S. and Stanev, Todor",
+    title = "{Uncertainties in Atmospheric Neutrino Fluxes}",
+    eprint = "astro-ph/0611266",
+    archivePrefix = "arXiv",
+    doi = "10.1103/PhysRevD.74.094009",
+    journal = "Phys. Rev. D",
+    volume = "74",
+    pages = "094009",
+    year = "2006"
+}
+
 
 @article{Aprile:2020vtw,
     author = "Aprile, E. and others",
@@ -2814,6 +2845,20 @@ year = {1997}
     year = "2017"
 }
 
+@article{Billard:2013qya,
+    author = "Billard, J. and Strigari, L. and Figueroa-Feliciano, E.",
+    title = "{Implication of neutrino backgrounds on the reach of next generation dark matter direct detection experiments}",
+    eprint = "1307.5458",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevD.89.023524",
+    journal = "Phys. Rev. D",
+    volume = "89",
+    number = "2",
+    pages = "023524",
+    year = "2014"
+}
+
 
 %%---------------------%%
 %%----- CHAPTER 7 -----%%
@@ -2892,6 +2937,10 @@ year = {1997}
     pages = "015503",
     year = "2015"
 }
+
+% Xenon1T radon
+ @misc{xenon1t_radon, 
+    title={Radon signals in XENON1T}, url={https://indico.cern.ch/event/573069/sessions/230077/attachments/1440290/2217054/170404_Xesat_Radon_signals_in_XENON1T_presentation_FINAL.pdf}, author={XENON1T}} 
 
 % Mutli-tonne xenon detectors
 @article{Schumann:2015cpa,
