--- a/Conclusion/conclusion.tex
+++ b/Conclusion/conclusion.tex
@@ -11,7 +11,7 @@ With rapid improvements across material and cleanliness driven backgrounds, rado
 
 The LZ detector simulation package, \textsc{BACCARAT}, was used with \textsc{NEST}, to simulate the response of backgrounds in the WIMP region of interest to examine the total number of expected backgrounds. A statistical inference framework, \textsc{LZstats}, was further developed and used to study the sensitivity and discovery potential of the experiment to WIMP dark matter for a variety of background scenarios. A cut-and-count analysis was used to estimate the background rates from significant contributors in a 1000 live day run and a 5.6 tonne fiducial mass. The ER and NR counts for a region of interest relevant to a 40 GeV/c\squared{} WIMP---approximately 1.5–6.5 keV for ERs and 6–30 keV for NRs, revealed that almost 70\% of all ER events are as a direct result of radon emanation. An 11-component background model was constructed to evaluate the impact of increased radon emanation levels on the SI WIMP sensitivity and discovery potential. Assuming the best case and worse case scenarios of 11.0 mBq and 60.4 mBq of radon; the 90\% CL sensitivity was shown to vary from a cross section $1.34\times10^{-48} \; \MathText{cm}^{2}$ to $1.76\times10^{-48} \; \MathText{cm}^{2}$; although significant, the increase is substantially slow over the range of possible radon scenarios, with the median 90\% CL limit staying well below the LZ requirement of $3.0\times10^{-48} \; \MathText{cm}^{2}$. Furthermore, the projected 90\% CL sensitivity cross section of a SI WIMP-nucleon, assuming a projected radon activity of 18.1 mBq, was determined to be $1.43\times10^{-48} \; \MathText{cm}^{2}$ for a WIMP mass of 40 GeV/c\squared{}. Moreover, the median 3\sigma  discovery significance was determined to occur at $3.4\times10^{-48} \; \MathText{cm}^{2}$. 
 
-Despite the best efforts, G2 dual-phase LXe detectors, soon to go online, are projected to reach SI-WIMP-nucleon sensitivities of  $\sim1.4\times10^{-48} \; \MathText{cm}^{2}$ at a 90\% CL, leaving a significant amount of the parameter space prior to the cosmic neutrino floor unexplored. To examine the necessary background rates and to explore the potentiality of probing down to the neutrino floor, a G3 toy experiment was envisioned. A 70 tonne LXe detector, similar to LZ, with an active fiducial volume of 60 tonnes was used; assuming the same spectral background expectation to that of the LZ detector for the WIMP region of interest. With improvements on screening and cleanliness techniques and a much better understanding of radon emanation at operational conditions; a 1/10 reduction factor was assumed on all detector related backgrounds (including \textbf{Det.} + \textbf{Lab.} + \textbf{Cosmo.} + \textbf{Surf.}) and radon emanation rates. A PLR analysis was constructed, and the SI WIMP cross section at a 90\% confidence level was evaluated for WIMP masses ranging from 5 GeV/c\squared{} up to 20,000 GeV/c\squared{}. The best projected sensitivity achieved for the toy G3 detector with the assumed background scaling and an exposure of 300 tonne $\times$ years was $1.2\times10^{-49} \; \MathText{cm}^{2}$ for a WIMP mass of 40 GeV/c\squared{}. With this sensitivity, the remaining parameter space that G2 experiments will fail to examine above the coherent scattering of neutrinos from astrophysical sources is comfortably reached.
+Despite the best efforts, G2 dual-phase LXe detectors, soon to go online, are projected to reach SI-WIMP-nucleon sensitivities of  $\sim1.4\times10^{-48} \; \MathText{cm}^{2}$ at a 90\% CL, leaving a significant amount of the parameter space prior to the solar neutrino floor unexplored. To examine the necessary background rates and to explore the potentiality of probing down to the neutrino floor, a G3 toy experiment was envisioned. A 70 tonne LXe detector, similar to LZ, with an active fiducial volume of 60 tonnes was used; assuming the same spectral background expectation to that of the LZ detector for the WIMP region of interest. With improvements on screening and cleanliness techniques and a much better understanding of radon emanation at operational conditions; a 1/10 reduction factor was assumed on all detector related backgrounds (including \textbf{Det.} + \textbf{Lab.} + \textbf{Cosmo.} + \textbf{Surf.}) and radon emanation rates. A PLR analysis was constructed, and the SI WIMP cross section at a 90\% confidence level was evaluated for WIMP masses ranging from 5 GeV/c\squared{} up to 20,000 GeV/c\squared{}. The best projected sensitivity achieved for the toy G3 detector with the assumed background scaling and an exposure of 300 tonne $\times$ years was $1.2\times10^{-49} \; \MathText{cm}^{2}$ for a WIMP mass of 40 GeV/c\squared{}. With this sensitivity, the remaining parameter space that G2 experiments will fail to examine above the coherent scattering of neutrinos from astrophysical sources is comfortably reached.
 
 The advancement in dual-phase LXe technologies in detecting ultra-rare events made possible the search the the most elusive particle known to mankind. With further improvements, it is possible for this technology to transition into a rare event search observatory; looking for dark matter particles at much lower energies, while also becoming competitive in \neutrinolessDoubleBeta{} and the astrophysical neutrino landscape. Although the NR background rates are below one event for the entirety of a planned science run, the ER rates, which impact both the WIMP search and any ER-related physic search, still remain relatively high. The biggest contribution is coming from the material-induced radon emanation. To better understand this background, measure the temperature dependence of radon emanation across different detector materials, and develop techniques to reduce radon diffusion, a cryogenic radon emanation facility has been envisioned and under construction. The CREF facility will be used to model this background more accurately and precisely to achieve the ambitions set for a G3 observatory. A future detector with sub-dominant radon emanation will be able to probe new dark matter models in the ER band of the spectrum, while also expanding the scientific outreach of this technology beyond dark matter.
 
